Fix toolbar reply postbox alignment (#824)
Just some more fixes for the new toolbar UX.

Forgot to put back the fixes for the reply boxes from previous failed branch rebase 😄

Reviewed-on: https://git.mills.io/yarnsocial/yarn/pulls/824
Co-committed-by: Phil S. <ullarah@noreply@mills.io>

--- a/internal/theme/static/css/99-yarn.css
+++ b/internal/theme/static/css/99-yarn.css
@@ -851,10 +851,13 @@ pre {
   padding-bottom: 0.35rem;
   border-bottom-left-radius: 0.25rem;
   border-bottom-right-radius: 0.25rem;
-  transition: ease-in linear 2s;
   border-style: solid;
   border-color: var(--form-element-focus-color);
   border-width: 0 0.15rem 0.15rem 0.15rem;
+}
+
+#postbox.drawer .toolbar-nav  {
+  margin: 0 0.55rem;
 }
 
 /* Version Information Panel */
@@ -961,6 +964,10 @@ span[title="Copyright"]:before {
 
   #postbox form {
     flex: 1 100%;
+  }
+
+  #postbox.drawer .toolbar-nav  {
+    margin: 0.05rem 0 0.75rem 0;
   }
 
   .toolbar-nav {
@@ -1152,7 +1159,7 @@ span[title="Copyright"]:before {
   }
 
   .bump-up {
-    margin-top: -2.9rem !important;
+    margin-top: -0.75rem !important;
   }
 }
 
@@ -1186,7 +1193,8 @@ span[title="Copyright"]:before {
   }
 
   .toolbar-nav {
-    width: 100%;
+    margin: -1.35rem 0 0 0.6rem;
+    gap: 0.78rem;
   }
 
   #mediaUploadForm {
